open ai lab 2 enpoint down?

--- a/Labfiles/02-azure-openai-api/CSharp/appsettings.json
+++ b/Labfiles/02-azure-openai-api/CSharp/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "AzureOAIEndpoint": "",
-    "AzureOAIKey": "",
-    "AzureOAIDeploymentName": ""
+    "AzureOAIEndpoint": "https://chat-rk.openai.azure.com/",
+    "AzureOAIKey": "880242f32fae4a07ba8e051c5d1d47fc",
+    "AzureOAIDeploymentName": "gpt-35-turbo"
 }
