lab 4 and gofish fixed

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Labfiles/02-azure-openai-api/CSharp/appsettings.json
 
 .fake
 Labfiles/03-prompt-engineering/CSharp/appsettings.json
+Labfiles/04-code-generation/CSharp/appsettings.json
