--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Labfiles/02-azure-openai-api/CSharp/appsettings.json
 .fake
 Labfiles/03-prompt-engineering/CSharp/appsettings.json
 Labfiles/04-code-generation/CSharp/appsettings.json
+Labfiles/05-image-generation/CSharp/appsettings.json
+
