--- a/Labfiles/05-image-generation/CSharp/appsettings.json
+++ b/Labfiles/05-image-generation/CSharp/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "AzureOAIEndpoint": "YOUR_ENDPOINT",
-    "AzureOAIKey": "YOUR_KEY"
+    "AzureOAIEndpoint": "https://chat-rk.openai.azure.com/",
+    "AzureOAIKey": "880242f32fae4a07ba8e051c5d1d47fc"
 }
